--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,8 +1,9 @@
+{% extends 'polls/base.html' %}
+{% block content %}
 <h1>{{ question.question_text }}</h1>
 <ul>
 {% for choice in question.choice_set.all %}
-    <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+    <li>{{ choice.choice_text }}</li>
 {% endfor %}
 </ul>
-
-
+{% endblock %}
