--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,12 +1,7 @@
-{% if latest_question_list %}
-    <ul>
-    {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-    </ul>
-{% else %}
-    <p>No polls are available.</p>
-{% endif %}
-
-
-
-
+{% extends 'polls/base.html' %}
+{% block content %}
+<h1>Hello, world. cb59b747 is the polls index.</h1>
+    {% for q in latest_question_list %}
+        <a href={{q.id}}>{{ q.question_text }} </a>
+    {% endfor %}
+{% endblock %}
