--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 {% extends 'polls/base.html' %}
 {% block content %}
-<h1>Hello, world. cb59b747 is the polls index.</h1>
+
     {% for q in latest_question_list %}
-        <a href={{q.id}}>{{ q.question_text }} </a>
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
     {% endfor %}
 {% endblock %}
