--- a/polls/templates/detail.html
+++ b/polls/templates/detail.html
@@ -2,6 +2,8 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
+        <a href="{% url 'polls:detail' question.id %}">Answer to the Ultimate Question</a>
+
 <form action="{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
 {% for choice in question.choice_set.all %}
